--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>זהר יעקובי - ריפוי בעיסוק לילדים</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="images\favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
 </head>
@@ -14,20 +14,20 @@
 
   <div class="top-container">
     <div class="topcloud">
-      <img src="images\cloud.png" alt="cloud">
+      <img src="cloud.png" alt="cloud">
     </div>
     <h1>זהר יעקובי</h1>
     <p>מרפאה בעיסוק לילדים B.O.T</p>
     <div class="cloud">
-      <img src="images\cloud.png" alt="cloud">
+      <img src="cloud.png" alt="cloud">
     </div>
-    <img src="images\zoharlogo.png" alt="Zohar Logo">
+    <img src="zoharlogo.png" alt="Zohar Logo">
   </div>
   <div class="middle-container">
     <div class="profile">
       <img src="" alt="">
       <h2>נעים להכיר - אני זהר</h2>
-      <img class="zoharpic" src="images\zohar22.jpg" alt="Zohar">
+      <img class="zoharpic" src="zohar22.jpg" alt="Zohar">
       <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
     <hr>
@@ -39,7 +39,7 @@
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
-        <img class="trampolina" src="images\trampolina.png" alt="Trampolina">
+        <img class="trampolina" src="trampolina.png" alt="Trampolina">
         <h3>Lorem Ipsum Dolor</h3>
         <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
