--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="cloud">
       <img src="images\cloud.png" alt="cloud">
     </div>
-    <img src="images\zoharlogo.png" alt="Zohar Logo">
+    <img class=logo src="images\zoharlogo.png" alt="Zohar Logo">
   </div>
   <div class="middle-container">
     <div class="profile">
