--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>זהר יעקובי - ריפוי בעיסוק לילדים</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="images\favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
 </head>
